--- a/ansible.yml
+++ b/ansible.yml
@@ -24,3 +24,8 @@
       service:
         name: httpd
         state: started
+    - name: Stop service IpTables
+      service:
+        name: iptables
+        state: stopped
+
